--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 
     <style>
       #gameScreen {
-        border: 1px solid red;
+        border: 1px solid black;
       }
     </style>
   </head>
+
+  <div>
+    <img class="hidden" id="Phantom" src="Phantom.png" style="display: none;" />
+  </div>
 
   <body>
     <canvas id="gameScreen" width="800" height="800"></canvas>
